# jean-gui

./: .clang-format  .clang-tidy  .gitignore  .iwyu-mappings.imp  .pre-commit-config.yaml  .vimrc  .vimspector.json  CMakeLists.txt  README.md  TODO  meson.build
.github/workflows/: checks.yml
include/: uiligi.h  wxligi.h
include/jg/: context.h  object.h  template.h  value.h
include/jgui/: context.h  object.h  template.h  value.h
include/jgui/wx/: app.h
include/mezo/: object.h  template.h  value.h
include/uiligi/: class.h  class_registry.h  context.h  module.h  object.h  template.h  value.h
include/wxligi/: app.h  context.h  template.h
modules/jgui/: meson.build
modules/jgui-wx/: meson.build
modules/jgui-wx/private/: app.cc
modules/jgui-wx/public/jgui/wx/: app.h  common.h
modules/jgui/include/jgui/: static_config.h  template.h
modules/jgui/include/jgui/core/: context.h  core.h  error_code.h  id.h
modules/jgui/include/jgui/misc/: utils.h
modules/jgui/include/jgui/object-model/: arguments.h  class.h  member.h  member_types.h  object.h  value.h
modules/jgui/private/: class.c  class.h  context.c  context.h  core_plugin.c  core_plugin.h  module.c  module.h  object.c  template.c  value.c
modules/jgui/private/common/: arena.c  arena.h  constants.h  debug.c  debug.h  index.c  index.h  memory.c  memory.h  stack.c  stack.h  string.c  string.h
modules/jgui/private/containers/: index.c  index.h  stack.h  vector.c  vector.h
modules/jgui/private/core/: context.c  core_plugin.c  core_plugin.h  id.c
modules/jgui/private/memory/: alloc.c  alloc.h  arena.c  pool.h
modules/jgui/private/misc/: assert.c  assert.h
modules/jgui/private/object-model/: argument.c  argument.h  arguments.c  class.c  class.h  member.c  member.h  module.c  module.h  value.c
modules/jgui/private/templating/: template.c
modules/jgui/public/jgui/: class.h  context.h  core.h  debug.h  module.h  object.h  template.h  value.h
modules/samples/: main.c  meson.build
modules/tests/: common.h  main.c  meson.build  test_context.c  test_object.c  test_template.c  test_value.c
modules/tests/common/: cmocka.h
modules/tests/common/fixtures/: user_model.c  user_model.h
modules/tests/fixtures/: user_model.c  user_model.h
modules/tests/tests/containers/: _index.c  test_index.c  test_vector.c
modules/tests/tests/core/: _index.c  test_context.c  test_id.c
modules/tests/tests/object-model/: _index.c  test_arguments.c  test_class.c  test_member.c  test_module.c  test_value.c
modules/tests/tests/todo/: test_context.c  test_object.c  test_value.c
src/: app.c  class.c  class_impl.h  class_registry.c  context.c  module.c  object.c  object_impl.h  template.c  test.c  value.c
src/jgui/: CMakeLists.txt  context.c  meson.build  object.c  template.c  value.c
src/jgui-wx/private/: app.cc
src/jgui-wx/public/jgui/wx/: app.h
src/jgui/include/jgui/: static-config.h  template.h
src/jgui/include/jgui/core/: context.h  core.h  error-code.h  id.h
src/jgui/include/jgui/misc/: utils.h
src/jgui/include/jgui/object-model/: arguments.h  class.h  member.h  object.h  value.h
src/jgui/private/: memory.c  misc.c  misc.h  stack.c  stack.h
src/jgui/private/containers/: index.c  index.h  stack.c  vector.c  vector.h
src/jgui/private/core/: context.c  context.h  core-plugin.c  core-plugin.h  id.c
src/jgui/private/memory/: alloc.c  alloc.h  arena.c  arena.h  pool.c  string.c  string.h
src/jgui/private/misc/: assert.c  assert.h  utils.h
src/jgui/private/object-model/: arguments.c  class.c  class.h  member.c  member.h  module.c  module.h  object.c  value.c
src/private/: class.h  memory.c  memory.h  misc.c  misc.h  stack.c  stack.h
src/utils/: hashmap.c  hashmap.h
src/wx/: ulg_wx_frame.h
subprojects/check/: .gitrepo
subprojects/cmocka/: .gitrepo  CMakeLists.txt
subprojects/cmocka/include/: cmocka.h
subprojects/libyaml/: .gitrepo
subprojects/minunit/: .gitrepo  minunit.h
subprojects/wxc/: .gitrepo  meson.build
subprojects/wxc/include/wxc/: app.h  common.h
subprojects/wxc/src/: app.cc  wxc_app.cc  wxc_app.h  wxc_object.cc  wxc_object.h
subprojects/wxc/src/common/: closure.h
tests/: CMakeLists.txt  main.c  meson.build  test_context.c  test_object.c  test_object.h  test_template.c  test_value.c
tests/common/: cmocka.h  hooks.c
tests/common/fixtures/: user_model.c  user_model.h
tests/fixtures/: admin.c  admin.h  common.c  common.h  team.c  team.h  user.c  user.h  user_model.c  user_model.h
tests/tests/containers/: index-tests.c  test_index.c  test_vector.c  vector-tests.c
tests/tests/core/: context-tests.c  id-tests.c  test_context.c  test_id.c
tests/tests/object-model/: _index.c  arguments-tests.c  class-tests.c  member-tests.c  module-tests.c  test_arguments.c  test_class.c  test_member.c  test_module.c  test_value.c  value-tests.c
tests/tests/todo/: test_template.c
tools/dev-tools/cmake/: checks.cmake  common.cmake  iwyu.cmake
tools/dev-tools/ide-config/: vimspector.json.sample
tools/dev-tools/iwyu/: iwyu_tool.py
tools/wx-bind/: meson.build
tools/wx-bind/src/: main.cc
